BUGFIX: fix search field without icons and some jumping issues (#2449)

--- a/packages/neos-ui/src/Containers/LeftSideBar/NodeTreeSearchBar/NodeTreeFilter/style.css
+++ b/packages/neos-ui/src/Containers/LeftSideBar/NodeTreeSearchBar/NodeTreeFilter/style.css
@@ -1,9 +1,6 @@
 .searchBar {
     display: flex;
-}
-
-.searchBar__searchInput {
-    flex-grow: 1;
+    width: calc(var(--spacing-GoldenUnit) * 4);
 }
 
 .searchBar__clearButton {
